fix: 修复CORS跨域配置，允许外网sandbox访问
- 将allowed-origins从localhost白名单改为通配符*
- SecurityConfig中使用setAllowedOriginPatterns支持通配符
- 解决浏览器CORS预检OPTIONS 403导致的'网络请求失败'问题